@@ -27,6 +27,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -60,12 +61,12 @@ class ClienteServiceExtendedTest {
     @DisplayName("Deve lançar exceção ao tentar criar cliente com CPF já existente")
     void criarCliente_deveLancarExcecao_quandoCpfJaExiste() {
         // Given
-        var clienteRequest = criarClienteRequestValido();
+        ClienteRequestBody clienteRequest = criarClienteRequestValido();
         when(clienteRepository.findByCpf(clienteRequest.getCpf()))
                 .thenReturn(Optional.of(new Cliente()));
 
         // When & Then
-        var exception = assertThrows(CpfJaCadastradoException.class, () -> {
+        CpfJaCadastradoException exception = assertThrows(CpfJaCadastradoException.class, () -> {
             clienteService.criarCliente(clienteRequest);
         });
 
@@ -77,13 +78,13 @@ class ClienteServiceExtendedTest {
     @DisplayName("Deve criar cliente com sucesso quando dados são válidos")
     void criarCliente_deveCriarComSucesso_quandoDadosValidos() {
         // Given
-        var clienteRequest = criarClienteRequestValido();
-        var clienteSalvo = criarClienteComId();
-        var clienteDTO = new ClienteDTO();
+        ClienteRequestBody clienteRequest = criarClienteRequestValido();
+        Cliente clienteSalvo = criarClienteComId();
+        ClienteDTO clienteDTO = new ClienteDTO();
         clienteDTO.setId(1L);
         clienteDTO.setNome("João Silva");
         clienteDTO.setCpf("11144477735");
-        var enderecoViaCep = new EnderecoDTO("01001000", "Praça da Sé", "Sé", "São Paulo", "SP", null);
+        EnderecoDTO enderecoViaCep = new EnderecoDTO("01001000", "Praça da Sé", "Sé", "São Paulo", "SP", null);
 
         when(clienteRepository.findByCpf(anyString())).thenReturn(Optional.empty());
         when(clienteMapper.toEntity(clienteRequest)).thenReturn(clienteSalvo);
@@ -92,7 +93,7 @@ class ClienteServiceExtendedTest {
         when(clienteMapper.toDTO(clienteSalvo)).thenReturn(clienteDTO);
 
         // When
-        var resultado = clienteService.criarCliente(clienteRequest);
+        ClienteDTO resultado = clienteService.criarCliente(clienteRequest);
 
         // Then
         assertNotNull(resultado);
@@ -107,8 +108,8 @@ class ClienteServiceExtendedTest {
     @DisplayName("Deve buscar cliente por ID com sucesso")
     void buscarPorId_deveRetornarCliente_quandoIdExiste() {
         // Given
-        var cliente = criarClienteComId();
-        var clienteDTO = new ClienteDTO();
+        Cliente cliente = criarClienteComId();
+        ClienteDTO clienteDTO = new ClienteDTO();
         clienteDTO.setId(1L);
         clienteDTO.setNome("João Silva");
         
@@ -116,7 +117,7 @@ class ClienteServiceExtendedTest {
         when(clienteMapper.toDTO(cliente)).thenReturn(clienteDTO);
 
         // When
-        var resultado = clienteService.buscarPorId(1L);
+        ClienteDTO resultado = clienteService.buscarPorId(1L);
 
         // Then
         assertNotNull(resultado);
@@ -131,7 +132,7 @@ class ClienteServiceExtendedTest {
         when(clienteRepository.findById(999L)).thenReturn(Optional.empty());
 
         // When & Then
-        var exception = assertThrows(ClienteNaoEncontradoException.class, () -> {
+        ClienteNaoEncontradoException exception = assertThrows(ClienteNaoEncontradoException.class, () -> {
             clienteService.buscarPorId(999L);
         });
 
@@ -142,18 +143,18 @@ class ClienteServiceExtendedTest {
     @DisplayName("Deve listar clientes com paginação")
     void listarTodos_deveRetornarPaginaClientes() {
         // Given
-        var cliente = criarClienteComId();
-        var clienteDTO = new ClienteDTO();
+        Cliente cliente = criarClienteComId();
+        ClienteDTO clienteDTO = new ClienteDTO();
         clienteDTO.setNome("João Silva");
-        var pageable = PageRequest.of(0, 10);
-        var clientesPage = new PageImpl<>(List.of(cliente), pageable, 1);
-        var clientesDTOPage = new PageImpl<>(List.of(clienteDTO), pageable, 1);
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Cliente> clientesPage = new PageImpl<>(Collections.singletonList(cliente), pageable, 1);
+        Page<ClienteDTO> clientesDTOPage = new PageImpl<>(Collections.singletonList(clienteDTO), pageable, 1);
 
         when(clienteRepository.findAll((Specification<Cliente>) any(), eq(pageable))).thenReturn(clientesPage);
         when(clienteMapper.toDTO(clientesPage)).thenReturn(clientesDTOPage);
 
         // When
-        var resultado = clienteService.listarTodos(null, null, pageable);
+        Page<ClienteDTO> resultado = clienteService.listarTodos(null, null, pageable);
 
         // Then
         assertNotNull(resultado);
@@ -166,13 +167,13 @@ class ClienteServiceExtendedTest {
     @DisplayName("Deve atualizar cliente existente")
     void atualizarCliente_deveAtualizarComSucesso_quandoClienteExiste() {
         // Given
-        var clienteExistente = criarClienteComId();
-        var clienteRequest = criarClienteRequestValido();
+        Cliente clienteExistente = criarClienteComId();
+        ClienteRequestBody clienteRequest = criarClienteRequestValido();
         clienteRequest.setNome("João Silva Atualizado");
-        var clienteDTO = new ClienteDTO();
+        ClienteDTO clienteDTO = new ClienteDTO();
         clienteDTO.setId(1L);
         
-        var enderecoViaCep = new EnderecoDTO("01001000", "Praça da Sé", "Sé", "São Paulo", "SP", null);
+        EnderecoDTO enderecoViaCep = new EnderecoDTO("01001000", "Praça da Sé", "Sé", "São Paulo", "SP", null);
 
         when(clienteRepository.findById(1L)).thenReturn(Optional.of(clienteExistente));
         when(clienteRepository.findByCpf(anyString())).thenReturn(Optional.of(clienteExistente));
@@ -181,7 +182,7 @@ class ClienteServiceExtendedTest {
         when(clienteMapper.toDTO(clienteExistente)).thenReturn(clienteDTO);
 
         // When
-        var resultado = clienteService.atualizarCliente(1L, clienteRequest);
+        ClienteDTO resultado = clienteService.atualizarCliente(1L, clienteRequest);
 
         // Then
         assertNotNull(resultado);
@@ -210,7 +211,7 @@ class ClienteServiceExtendedTest {
         when(clienteRepository.existsById(999L)).thenReturn(false);
 
         // When & Then
-        var exception = assertThrows(ClienteNaoEncontradoException.class, () -> {
+        ClienteNaoEncontradoException exception = assertThrows(ClienteNaoEncontradoException.class, () -> {
             clienteService.deletarCliente(999L);
         });
 
@@ -220,26 +221,26 @@ class ClienteServiceExtendedTest {
 
     // Métodos auxiliares para criação de objetos de teste
     private ClienteRequestBody criarClienteRequestValido() {
-        var telefone = new Telefone("11", "987654321", "CELULAR");
-        var email = new Email("joao@teste.com");
-        var endereco = new EnderecoDTO("01001000", null, null, null, null, "Apto 101");
+        Telefone telefone = new Telefone("11", "987654321", "CELULAR");
+        Email email = new Email("joao@teste.com");
+        EnderecoDTO endereco = new EnderecoDTO("01001000", null, null, null, null, "Apto 101");
 
         return new ClienteRequestBody(
                 "João Silva",
                 "11144477735",
-                Set.of(telefone),
-                Set.of(email),
-                List.of(endereco)
+                new HashSet<>(Collections.singletonList(telefone)),
+                new HashSet<>(Collections.singletonList(email)),
+                Collections.singletonList(endereco)
         );
     }
 
     private Cliente criarClienteComId() {
-        var cliente = new Cliente();
+        Cliente cliente = new Cliente();
         cliente.setId(1L);
         cliente.setNome("João Silva");
         cliente.setCpf("11144477735");
-        cliente.setTelefones(Set.of(new Telefone("11", "987654321", "CELULAR")));
-        cliente.setEmails(Set.of(new Email("joao@teste.com")));
+        cliente.setTelefones(new HashSet<>(Collections.singletonList(new Telefone("11", "987654321", "CELULAR"))));
+        cliente.setEmails(new HashSet<>(Collections.singletonList(new Email("joao@teste.com"))));
         return cliente;
     }
 }
